# final-capstone-project-agentic-ai-team-9

./: .gitignore  Modelfile  README.md  api.py  app.py  database.py  llm.py  movie_preprocessing (1).ipynb  movie_preprocessing.ipynb  rag_pipeline.py  requirements.txt  test_speed.py  tmdb.py  view_db.py
assets/: .gitkeep
cinedna-v3/: .gitignore  README.md
cinedna-v3/backend/: main.py  pyproject.toml
cinedna-v3/backend/api/routes/: chat.py  dna.py  movie.py  profile.py  recommendations.py
cinedna-v3/backend/core/: config.py
cinedna-v3/backend/db/: database.py
cinedna-v3/backend/llm/: agent.py
cinedna-v3/backend/mcp_server/: server.py
cinedna-v3/backend/mcp_server/tools/: profile_tools.py  recommendation_tools.py  taste_tools.py  tmdb_tools.py
cinedna-v3/backend/rag/: embeddings.py  pipeline.py  vectorstore.py
cinedna-v3/backend/services/: cache.py  dna_profiler.py  tmdb.py
cinedna-v3/frontend/: index.html  package-lock.json  package.json  vite.config.js
cinedna-v3/frontend/src/: App.jsx  index.css
cinedna-v3/frontend/src/api/: client.js
cinedna-v3/frontend/src/components/: MovieCard.css  MovieCard.jsx  MovieDetailModal.css  MovieDetailModal.jsx  Navbar.css  Navbar.jsx
cinedna-v3/frontend/src/pages/: Chat.css  Chat.jsx  Landing.css  Landing.jsx  MovieDNA.css  MovieDNA.jsx  Profile.css  Profile.jsx  (+2 more)
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  LandingPage.tsx  OnboardingWizard.tsx
frontend/src/store/: useStore.ts
