[project]
name = "cinedna-backend"
version = "3.0.0"
description = "CineDNA V3 - Production-grade Agentic AI Movie Companion"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=1.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-core>=1.4.0",
    "langchain-community>=0.4.0",
    "chromadb>=0.6.0",
    "sentence-transformers>=3.3.0",
    "mcp[cli]>=1.0.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "aiohttp>=3.11.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
]
